2011-07-11  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/YarpVersion.cmake: bump version number to 2.3.6

2011-07-10  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/doc/rpc_ports.dox: fix documentation to show rpc client
	instead of duplicating rpc server [thanks Ugo Pattacini]

2011-07-07  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* COPYING: clarify years of participation of member
	organizations of "RobotCub Consortium" [thanks Lorenzo Natale]
	[thanks Lorenzo DeMichieli]

2011-07-06  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* COPYING: clarify meaning of "RobotCub Consortium" for
	copyright purposes [thanks Giorgio Metta]

2011-07-02  Ugo Pattacini  <ugo.pattacini@iit.it>

        * src/libYARP_dev/include/yarp/dev/GazeControl.h:
        new methods get3DPoint() and get3DPointOnPlane() added to
        facilitate 2d-3d mapping.

2011-06-30  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/harness/BottleTest.cpp: test "null bottle"
	copying, and modify existing tests for new expected behavior

	* src/libYARP_OS/include/yarp/os/Bottle.cpp: copy "null bottles"
	without fuss, to meet user expectations [thanks Gianluca Massera]

	* conf/template/YARPConfig.cmake.in: remove auto-linking 
	option, which was there to ease a transition to more
	normal behavior of FIND_PACKAGE(YARP) last year.

2011-06-28  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/swig/yarp.i: fix C# types for Image::getRawImage()
	[thanks Stephane Lallee]

2011-06-24  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/YarpVersion.cmake: bump version number to 2.3.5

	* example/swig/yarp.i: patch for using NetworkBase::write via
	SWIG [thanks Leo Pape]

2011-06-23  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* YarpSystemCheck.cmake: check for __ACE_INLINE__ being needed, it
	got dropped from ACE config file for linux from ACE 6.0.2 and
	later.

	* src/libYARP_OS/include/yarp/os/impl/PlatformTime.h,
	src/libYARP_OS/src/ShmemInputStream.cpp: gettimeofday