@@ -20,17 +20,18 @@ include(CheckTypeSize)
 
 set(YARP_INT16)
 set(YARP_INT32)
+set(YARP_INT64)
 set(YARP_FLOAT64)
 
-check_type_size("int" SIZEOF_INT)
 check_type_size("short" SIZEOF_SHORT)
+check_type_size("int" SIZEOF_INT)
+check_type_size("long" SIZEOF_LONG)
 if(SIZEOF_INT EQUAL 4)
   set(YARP_INT32 "int")
 else(SIZEOF_INT EQUAL 4)
   if(SIZEOF_SHORT EQUAL 4)
     set(YARP_INT32 "short")
   else(SIZEOF_SHORT EQUAL 4)
-    check_type_size("long" SIZEOF_LONG)
     if(SIZEOF_LONG EQUAL 4)
       set(YARP_INT32 "long")
     endif(SIZEOF_LONG EQUAL 4)
@@ -46,6 +47,7 @@ else(SIZEOF_SHORT EQUAL 2)
   message(STATUS "Continuing...")
 endif(SIZEOF_SHORT EQUAL 2)
 
+check_type_size("float" SIZEOF_FLOAT)
 check_type_size("double" SIZEOF_DOUBLE)
 if(SIZEOF_DOUBLE EQUAL 8)
   set(YARP_FLOAT64 "double")
@@ -55,6 +57,27 @@ else(SIZEOF_DOUBLE EQUAL 8)
   endif(SIZEOF_FLOAT EQUAL 8)
 endif(SIZEOF_DOUBLE EQUAL 8)
 
+if(SIZEOF_DOUBLE EQUAL 4)
+  set(YARP_FLOAT32 "double")
+else()
+  if(SIZEOF_FLOAT EQUAL 4)
+    set(YARP_FLOAT32 "float")
+  endif()
+endif()
+
+if (SIZEOF_LONG EQUAL 8)
+  set(YARP_INT64 "long")
+else ()
+  check_type_size("long long" SIZEOF_LONGLONG)
+  if (SIZEOF_LONGLONG EQUAL 8)
+    set(YARP_INT64 "long long")
+  else ()
+    check_type_size("__int64" SIZEOF___INT64)
+    if (SIZEOF___INT64 EQUAL 8)
+      set(YARP_INT64 "__int64")
+    endif ()
+  endif ()
+endif ()
 
 #########################################################################
 # Set up compile flags, and configure ACE
