@@ -11,12 +11,20 @@
 
 #define YARP_CMAKE_CONFIG
 
+#ifdef YARP_INT16
+#undef YARP_INT16
+#endif
+
 #ifdef YARP_INT32
 #undef YARP_INT32
 #endif
 
-#ifdef YARP_INT16
-#undef YARP_INT16
+#ifdef YARP_INT64
+#undef YARP_INT64
+#endif
+
+#ifdef YARP_FLOAT32
+#undef YARP_FLOAT32
 #endif
 
 #ifdef YARP_FLOAT64
@@ -31,8 +39,10 @@
 #undef YARP_LITTLE_ENDIAN
 #endif
 
-#define YARP_INT32 ${YARP_INT32}
 #define YARP_INT16 ${YARP_INT16}
+#define YARP_INT32 ${YARP_INT32}
+#define YARP_INT64 ${YARP_INT64}
+#define YARP_FLOAT32 ${YARP_FLOAT32}
 #define YARP_FLOAT64 ${YARP_FLOAT64}
 
 #cmakedefine YARP_BIG_ENDIAN
